--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
 server.port=8080;
 
+#MySQL
+spring.datasource.url =jdbc:mysql://localhoast:3306/SnehaInsuranceDB
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.username =root
+spring.datasource.password =Abhilash@mysql123
+
 #Jpa/Hibernate
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.show-sql=true
+
+
+
+
+#log
+logging.file.path=/
+logging.file.name=SnehaInsuranceLog.txt
+logging.level.=Debug
+
